--- a/Views/Dennys/Registro.cshtml
+++ b/Views/Dennys/Registro.cshtml
@@ -21,7 +21,7 @@
 
               <div class="label-input">
                 <label for="nombre">Email*</label>
-                <input type="text" placeholder="Email" name="Email" required />
+                <input type="text" placeholder="Email" name="Email" id="email" required />
               </div>
               <div class="label-input">
                 <label for="nombre">Contraseña*</label>
