--- a/Views/Dennys/Bienvenida.cshtml
+++ b/Views/Dennys/Bienvenida.cshtml
@@ -81,7 +81,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <form>
+          <form method="post">
           
             <button type="button" class="btn btn-primary" onclick="Calendario()">Seleccionar Fecha</button>
             <button type="button" class="btn btn-primary" onclick="SeleccionarCantidadPersonas()">Seleccionar Personas</button>
@@ -111,7 +111,7 @@
                 </div>
             </div>
            
-                <div class="modal-body">
+                <div class="modal-body" >
                     <input type="hidden" name="idCliente" value="@BD.user.IdCliente">
                     <input type="hidden" name="idRestaurante" id="IdRestaurante">
                     <div id="cuadroTexto">
