--- a/Views/Dennys/Login.cshtml
+++ b/Views/Dennys/Login.cshtml
@@ -45,7 +45,7 @@
   <div class="grupo-1"> 
     <div class="box">
       <figure>
-        <a href="#">
+        <a href='@Url.Action("Bienvenida", "Dennys")'>
           <img src="../img/logo-dennys.png" alt="logo" >
         </a>
       </figure>
