--- a/Views/Dennys/Reservas.cshtml
+++ b/Views/Dennys/Reservas.cshtml
@@ -44,6 +44,7 @@
         {
             <div class="card-reseña">
                 <div class="dentro-reserva">
+                  <img src="@item.Imagen" alt="">
                     <p>Lugar: @item.NombreRestaurante</p>
                     <p>Fecha: @item.FechaReserva</p>
                     <p>Hora: @item.HoraReserva</p>
@@ -60,7 +61,7 @@
   <div class="grupo-1"> 
     <div class="box">
       <figure>
-        <a href="#">
+        <a href='@Url.Action("Bienvenida", "Dennys")'>
           <img src="../img/logo-dennys.png"  >
         </a>
       </figure>
