--- a/Views/Dennys/Registro.cshtml
+++ b/Views/Dennys/Registro.cshtml
@@ -58,7 +58,7 @@
   <div class="grupo-1"> 
     <div class="box">
       <figure>
-        <a href="#">
+        <a href='@Url.Action("Bienvenida", "Dennys")'>
           <img src="../img/logo-dennys.png"  >
         </a>
       </figure>
