--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -163,6 +163,12 @@ nav {
   border: 1px solid black;
   
 }
+.abuelo-button-recu{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 1fr 1fr;
+  gap: 20px;
+}
 .padre-recu{
   display: flex;
   justify-content: center;
