--- a/Views/Dennys/Login.cshtml
+++ b/Views/Dennys/Login.cshtml
@@ -32,6 +32,10 @@
                   </button>
                 </div>
               </div>
+               <div class="div-ya-tenes">
+                   <p class="p-ya-tenes">No tienen cuenta?</p>
+                   <a class="a-ya-tenes" href='@Url.Action("Registrarte", "Dennys")'>Registrese</a>
+                </div>
                 
               </form>
             </div>
