--- a/Views/Dennys/ayuda.cshtml
+++ b/Views/Dennys/ayuda.cshtml
@@ -105,10 +105,10 @@
           <h2>Dennys te ayuda. ¿Cuál es tu consulta?</h2>
         </div>
         <div class="consulta-detalles">
-        <p>Para realizar una consulta es necesario que inicies sesión en tu cuenta</p>
+        <p>Para realizar una consulta puedes comunicarte en el espacio llamado Contactanos</p>
         <div class="padre-buttonn">
               <div class="div-botonn">
-                <button class="button" type="submit"><a  href='@Url.Action("Login", "Dennys")'>Inicia sesion</a></button>
+                <button class="button" type="submit"><a  href='@Url.Action("contactanos", "Dennys")'>Contactanos</a></button>
                 </div>
                 </div>
       </div>
@@ -134,16 +134,16 @@
     </div>
     <div class="box">
       <h2>SOBRE NOSOTROS</h2>
-      <p>Empresa líder en tecnología, venta y soporte informático en Argentina.</p>
-      <p>Tecnología y servicios informáticos de calidad en Argentina.</p>
+      <p>Pagina para reservar y compartir tus experiencias en diferentes restaurantes</p>
+      <p>Conéctate con restaurantes: reserva, deja reseñas y accede a detalles fácilmente.</p>
     </div>
     <div class="box">
       <h2>SIGUENOS</h2>
       <div class="red-social">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-whatsapp"></a>
+        <a href="https://www.facebook.com/?locale=es_LA" class="fa fa-facebook" target="_blank"></a>
+        <a href="https://www.instagram.com/" class="fa fa-instagram" target="_blank"></a>
+        <a href="https://twitter.com/?lang=es" class="fa fa-twitter" target="_blank"></a>
+        <a href="https://www.whatsapp.com/?lang=es" class="fa fa-whatsapp" target="_blank"></a>
       </div>
     </div>
   </div>
