--- a/Views/Dennys/contactanos.cshtml
+++ b/Views/Dennys/contactanos.cshtml
@@ -106,16 +106,16 @@
     </div>
     <div class="box">
       <h2>SOBRE NOSOTROS</h2>
-      <p>Empresa líder en tecnología, venta y soporte informático en Argentina.</p>
-      <p>Tecnología y servicios informáticos de calidad en Argentina.</p>
+      <p>Pagina para reservar y compartir tus experiencias en diferentes restaurantes</p>
+      <p>Conéctate con restaurantes: reserva, deja reseñas y accede a detalles fácilmente.</p>
     </div>
     <div class="box">
       <h2>SIGUENOS</h2>
       <div class="red-social">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-whatsapp"></a>
+        <a href="https://www.facebook.com/?locale=es_LA" class="fa fa-facebook" target="_blank"></a>
+        <a href="https://www.instagram.com/" class="fa fa-instagram" target="_blank"></a>
+        <a href="https://twitter.com/?lang=es" class="fa fa-twitter" target="_blank"></a>
+        <a href="https://www.whatsapp.com/?lang=es" class="fa fa-whatsapp" target="_blank"></a>
       </div>
     </div>
   </div>
